src/objects/LeanData__LD_Territory__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Name__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Territory_Segment__c</fullName>
        <label>Segment</label>
        <referenceTo>LeanData__Territory_Segment__c</referenceTo>
        <relationshipLabel>Territory&apos;s Segment</relationshipLabel>
        <relationshipName>TerritorySegment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LeanData__Version__c</fullName>
        <label>Version</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>LD Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>